src/styles/pages/category.scss
.cat-list {
  margin-bottom: 40px;
  margin-left: -10px;
  margin-right: -10px;

  &__button {
    padding: 5px 10px;

    background-color: $green;

    text-transform: uppercase;
    font-size: 10px;

    &--active {
      background-color: $white;
      
      color: $black;
    }
  }

  &__item {
    padding: 5px;
    
    line-height: 1;
  }
}

.video-cat-gall {
  .pswp-thumbnail {
    padding-top: 25px;
    margin-bottom: 25px;
  }
}

